--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,14 @@
 .App { 
 
   > nav {
-    padding: 0.5em;
+    padding: 1em;
     display: flex;
     a + a {
       margin-left: 1em;
     }
+  }
+
+  main {
+    padding: 1em;
   }
 }
