refactor: make nav styles global

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,6 @@
-.App { 
-  nav {
+.App {
+  > nav {
     padding: 1em;
-    display: flex;
-    a + a {
-      margin-left: 1em;
-    }
   }
 
   main {
